@@ -1,3 +1,8 @@
+2011-08-22  Gabriel Charette  <gchare@google.com>
+
+	* cpp.c (gfc_cpp_init): Force BUILTINS_LOCATION for tokens
+	defined in cpp_define_builtins.
+
 2011-08-22  Mikael Morin  <mikael.morin@gcc.gnu.org>
 
 	PR fortran/50050
